--- a/Entropy/Of Entropy and Order.ipynb
+++ b/Entropy/Of Entropy and Order.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>  However, when I accidently entered a large enough number for num_attempts, some alternate distributions emerged. </h3> "
+    "<h3>  However, when I accidentally entered a large number for num_attempts, some alternate distributions emerged. </h3> "
    ]
   },
   {
