Generalize to Life
Generalize to Life

--- a/Entropy/Of Entropy and Order.ipynb
+++ b/Entropy/Of Entropy and Order.ipynb
@@ -15,7 +15,7 @@
     "    <li> The <b> Q-Value or Reward </b> is the reward associated by taking some action on a state. In this case, the reward is defined by counting the total number of non-zero pixels in the image and multiplying it with 'some_constant' / (entropy of the image). The input to the model would be an image and the output would the predicted q-value for every possible action on that image.</li></ul>\n",
     "    \n",
     "<h3> What inspired this experiment? </h3>\n",
-    "<br> I believe that as 'intelligent' species we exist on this planet to capture and create order in the semi-chaotic environment around us. As such, our sense of beauty is biased towards higher order. However, though a completely black or white image has the lowest entropy of 0, 'magic' happens when you add 'just enough' entropy. So, we start with high entropy blocks to test if an Artificial Intelligence could mimic the human thirst for order and generate images that 'appear beautiful' to its natural counterpart. "
+    "<br> I believe that as 'intelligent' species we exist on this planet to capture and create order in the semi-chaotic environment around us. As such, our sense of beauty is biased towards higher order. However, though a completely black or white image has the lowest entropy of 0, 'magic' happens when you add 'just enough' entropy. So, we start with high entropy blocks to test if an Artificial Intelligence could mimic life's thirst for order and generate images that 'appear beautiful' to its natural counterpart. "
    ]
   },
   {
